[tool.poetry]
name = "db-repository"
version = "0.1.0"
description = ""
authors = ["Vitaliy.Mikhalchenko <Vitaliy.Mikhalchenko@bristolcapital.ru>"]
readme = "README.md"
packages = [{include = "db_repository"}]

[tool.poetry.dependencies]
python = "^3.9"
sqlmodel = "^0.0.16"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
